# slack-scrollback

./: .gitignore  LICENSE  Makefile  README.md  SKILL.md  pyproject.toml
src/slack_scrollback/: __init__.py  api.py  archive.py  cli.py  config.py  download.py  errors.py  format.py  localread.py  syncer.py  timeparse.py  workspace.py
tests/: conftest.py  test_api.py  test_archive.py  test_cli.py  test_cli_archive.py  test_config.py  test_docs.py  test_download.py  test_format.py  test_localread.py  test_syncer.py  test_timeparse.py  test_workspace.py
